force-app/main/default/objects/vlocity_ps__String__c/fields/vlocity_ps__BaseString__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__BaseString__c</fullName>
    <description>This field keeps string that need to be translated.</description>
    <label>Base String</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>