force-app/main/default/objects/vlocity_ps__String__c/fields/vlocity_ps__BaseStringHash__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__BaseStringHash__c</fullName>
    <description>MD5 Hash of Base String</description>
    <externalId>true</externalId>
    <label>Base String Hash</label>
    <length>80</length>
    <type>Text</type>
</CustomField>