force-app/main/default/objects/vlocity_ps__String__c/fields/vlocity_ps__Domain__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__Domain__c</fullName>
    <description>This field indicates type of strings.</description>
    <label>Domain</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>vlocity_ps__VlocityTranslationDomain</valueSetName>
    </valueSet>
</CustomField>